# AISP

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  README_CN.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: validate.yml
adrs/: adr-001-skill-package-layer-on-aisop.md  adr-002-aisp_contract-in-user-message.md  adr-003-aisp-suffix-and-folder-per-skill.md  adr-004-enforced_by-policy-as-code.md  adr-005-complementary-to-agent-skills.md  adr-template.md
docs/: changelog.md  index.md  specification.md
docs/adrs/: adr-006-axiom-0-immutability.md
docs/guides/: conformance-walkthrough.md  conformance-walkthrough_CN.md  discovering-skills.md  first-aisp-skill.md  getting-started.md  snapshot-release-workflow.md
docs/reference/: aisp-fields.md  aisp_contract-fields.md  conformance-rules.md  enforced_by-grammar.md  error-codes.md  generated-readme.md  glossary.md  registry-runtime-artifacts.md  release-evidence-matrix.md  release-evidence-matrix_CN.md  threat-taxonomy.md  validator-coverage.md
docs/topics/: axiom-0.md  core-concepts.md  discovery-and-registry.md  enforced-by-and-sys.md  interoperability-with-agent-skills.md  (+5 more)
examples/: README.md
schemas/: aisp-contract-v1.schema.json  runtime-trace-v1.schema.json  tool-capabilities-v1.schema.json
scripts/: release_check.ps1
specification/: AISP_Protocol_cn.md  aisp.proto
tests/: test_aisp_validate.py
tools/: aisp_hash.py  aisp_skill_md.py  aisp_validate_agent_skill_bridge.py  check_doc_sync.py
(+74 files in other folders)
